--- a/src/main/resources/templates/Alumnos/updatealumno.html
+++ b/src/main/resources/templates/Alumnos/updatealumno.html
@@ -5,87 +5,109 @@
     <title>Title</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/intlTelInput.min.js"></script>
-
+    <link href="../../static/css/comun.css" rel="stylesheet">
+    <link href="../../static/css/asignaturas/listasignaturas.css" rel="stylesheet">
+    <link href="../../static/css/Alumnos/formalumnos.css" rel="stylesheet">
 </head>
 <body>
-<h1>Agregacion de nuevos Alumnos</h1>
-<form name="alumnos" id="alumnos" action="#" th:action="@{/updatealumnospost}" method="post" onsubmit="process(event)">
-    <div style="display: flex; flex-direction: column">
-        <input type="hidden" th:field="${alumno.id}">
-        <div>
-            <label>Nombre</label>
-            <input type="text" th:field="${alumno.nombre}">
-            <div>
-                <span th:if="${#fields.hasErrors('alumno.nombre')}" th:errors="*{alumno.nombre}" style="color: red"></span>
+<header>
+    <h1>Colegio Universitario Internacional BITCOIN</h1>
+    <input class="btn boton_menu" type="button" onclick="menu();" value="Menu">
+</header>
+<main>
+    <div class="centro">
+        <h1>Modificacion de Alumnos</h1>
+        <form name="alumnos" id="alumnos" action="#" th:action="@{/addalumnospost}" method="post"
+              onsubmit="process(event)">
+            <div class="campos">
+                <div class="campo">
+                    Nombre:
+                    <input class="campo" type="text" th:field="${alumno.nombre}">
+                    <div>
+                        <span th:if="${#fields.hasErrors('alumno.nombre')}" th:errors="*{alumno.nombre}"
+                              style="color: red"></span>
+                    </div>
+                </div>
+                <div class="campo">
+                    Apellidos:
+                    <input class="campo" type="text" th:field="${alumno.apellidos}">
+                    <div>
+                        <span th:if="${#fields.hasErrors('alumno.apellidos')}" th:errors="*{alumno.apellidos}"
+                              style="color: red"></span>
+                    </div>
+                </div>
+                <div class="campo">
+                    Direccion:
+                    <input class="campo" type="text" th:field="${alumno.direccion}">
+                    <div>
+                        <span th:if="${#fields.hasErrors('alumno.direccion')}" th:errors="*{alumno.direccion}"
+                              style="color: red"></span>
+                    </div>
+                </div>
+                <div class="campo">
+                    Localidad:
+                    <input class="campo" type="text" th:field="${alumno.localidad}">
+                    <div>
+                        <span th:if="${#fields.hasErrors('alumno.localidad')}" th:errors="*{alumno.localidad}"
+                              style="color: red"></span>
+                    </div>
+                </div>
+                <div class="campo">
+                    Provincia:
+                    <input class="campo" type="text" th:field="${alumno.provincia}">
+                    <div>
+                        <span th:if="${#fields.hasErrors('alumno.provincia')}" th:errors="*{alumno.provincia}"
+                              style="color: red"></span>
+                    </div>
+                </div>
+                <div class="campo">
+                    Pais:
+                    <input class="campo" type="text" th:field="${alumno.pais}">
+                    <div>
+                        <span th:if="${#fields.hasErrors('alumno.pais')}" th:errors="*{alumno.pais}"
+                              style="color: red"></span>
+                    </div>
+                </div>
+                <div class="campo">
+                    Telefono:
+                    <input class="campo" id="phone" type="tel" name="phone" value="" th:field="${alumno.telefono}"/>
+                    <div>
+                        <span th:if="${#fields.hasErrors('alumno.telefono')}" th:errors="*{alumno.telefono}"
+                              style="color: red"></span>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div>
-            <label>apellidos</label>
-            <input type="text" th:field="${alumno.apellidos}">
-            <div>
-                <span th:if="${#fields.hasErrors('alumno.apellidos')}" th:errors="*{alumno.apellidos}" style="color: red"></span>
+            <br>
+            <br>
+            <div class="tabla">
+                <div class="labes">
+                    <label>Asignaturas</label>
+                </div>
+                <table>
+                    <thead>
+                    <th>Nombre</th>
+                    <th>Curso</th>
+                    <th>Horas</th>
+                    <th>Cuatrimestre</th>
+                    </thead>
+                    <tbody>
+                    <tr th:each="i : ${asignaturas}">
+                        <th><span th:text="${i.nombre}"></span></th>
+                        <th><span th:text="${i.curso}"></span></th>
+                        <th><span th:text="${i.horas}"></span></th>
+                        <th><span th:text="${i.cuatrimestre}"></span></th>
+                        <th><input type="checkbox" th:value="${i.id}" name="asignaturas"></th>
+                    </tr>
+                    </tbody>
+                </table>
             </div>
-        </div>
-        <div>
-            <label>direccion</label>
-            <input type="text" th:field="${alumno.direccion}">
-            <div>
-                <span th:if="${#fields.hasErrors('alumno.direccion')}" th:errors="*{alumno.direccion}" style="color: red"></span>
-            </div>
-        </div>
-        <div>
-            <label>localidad</label>
-            <input type="text" th:field="${alumno.localidad}">
-            <div>
-                <span th:if="${#fields.hasErrors('alumno.localidad')}" th:errors="*{alumno.localidad}" style="color: red"></span>
-            </div>
-        </div>
-        <div>
-            <label>provincia</label>
-            <input type="text" th:field="${alumno.provincia}">
-            <div>
-                <span th:if="${#fields.hasErrors('alumno.provincia')}" th:errors="*{alumno.provincia}" style="color: red"></span>
-            </div>
-        </div>
-        <div>
-            <label>pais</label>
-            <input type="text" th:field="${alumno.pais}">
-            <div>
-                <span th:if="${#fields.hasErrors('alumno.pais')}" th:errors="*{alumno.pais}" style="color: red"></span>
-            </div>
-        </div>
-        <div>
-            <label>telefono</label>
-            <input id="phone" type="tel" name="phone" value="" th:field="${alumno.telefono}"/>
-            <div>
-                <span th:if="${#fields.hasErrors('alumno.telefono')}" th:errors="*{alumno.telefono}" style="color: red"></span>
-            </div>
-        </div>
+            <input class="btn btn_asig" type="submit" value="Guardar" onclick="prueba(event)">
+        </form>
     </div>
-    <div>
-        <div>
-            <label>Asignaturas</label>
-            <table>
-                <thead>
-                <th>Nombre</th>
-                <th>Curso</th>
-                <th>Horas</th>
-                <th>Cuatrimestre</th>
-                </thead>
-                <tbody>
-                <tr th:each="i : ${asignaturas}">
-                    <th><span th:text="${i.nombre}"></span></th>
-                    <th><span th:text="${i.curso}"></span></th>
-                    <th><span th:text="${i.horas}"></span></th>
-                    <th><span th:text="${i.cuatrimestre}"></span></th>
-                    <th><input type="radio" th:value="${i.id}" th:field="${alumno.id_asignatura}"></th>
-                </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-    <input type="submit" value="submit" onclick="prueba(event)">
-</form>
+</main>
+<footer>
+    <h6>Creado por Carlos Castillo</h6>
+</footer>
 </body>
 <script th:inline="javascript">
     const phoneInputField = document.querySelector("#phone");
@@ -95,12 +117,17 @@
             "https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/utils.js",
     });
     const form = document.getElementById("alumnos");
-    function prueba(event){
+
+    function prueba(event) {
         event.preventDefault();
         let phoneNumber = phoneInput.getNumber();
         let phoneNumber2 = phoneNumber.replace(/ /g, "");
         document.alumnos.phone.value = phoneNumber2;
         form.submit();
+    }
+
+    function menu() {
+        location.href = "/menu"
     }
 </script>
 </html>
