--- a/src/main/resources/templates/loggin.html
+++ b/src/main/resources/templates/loggin.html
@@ -5,6 +5,7 @@
     <title>Title</title>
     <link href="../static/css/comun.css" rel="stylesheet">
     <link href="../static/css/loggin.css" rel="stylesheet">
+
 </head>
 <body>
 <header>
@@ -32,8 +33,8 @@
         </form>
     </div>
 </main>
-<!--<footer>-->
-<!--    <h6>Creado por Carlos Castillo</h6>-->
-<!--</footer>-->
+<footer>
+    <h6>Creado por Carlos Castillo</h6>
+</footer>
 </body>
 </html>
