--- a/src/main/resources/templates/Asignaturas/listasignatura.html
+++ b/src/main/resources/templates/Asignaturas/listasignatura.html
@@ -13,6 +13,7 @@
 <body>
 <header>
     <h1>Colegio Universitario Internacional BITCOIN</h1>
+    <input class="btn boton_menu" type="button" onclick="menu();" value="Menu">
 </header>
 <main>
     <div class="centro">
@@ -25,7 +26,7 @@
                         <th>Curso</th>
                         <th>Horas</th>
                         <th>Cuatrimestre</th>
-                        <th>Seleccion</th>
+                        <th class="sin_admin">Seleccion</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -34,7 +35,7 @@
                         <th><span th:text="${i.curso}"></span></th>
                         <th><span th:text="${i.horas}"></span></th>
                         <th><span th:text="${i.cuatrimestre}"></span></th>
-                        <th><input class="sin_admin" type="radio" th:value="${i.id}" th:name="ids"></th>
+                        <th class="sin_admin"><input type="radio" th:value="${i.id}" th:name="ids"></th>
                     </tr>
                     </tbody>
                 </table>
@@ -50,4 +51,9 @@
     <h6>Creado por Carlos Castillo</h6>
 </footer>
 </body>
+<script>
+    function menu() {
+        location.href = "/menu"
+    }
+</script>
 </html>
