--- a/src/main/resources/templates/Users/adduser.html
+++ b/src/main/resources/templates/Users/adduser.html
@@ -3,32 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/intlTelInput.min.js"></script>
+    <link href="../../static/css/comun.css" rel="stylesheet">
+    <link href="../../static/css/asignaturas/listasignaturas.css" rel="stylesheet">
+    <link href="../../static/css/Alumnos/formalumnos.css" rel="stylesheet">
 </head>
 <body>
-<h1>Agregacion de nuevos Alumnos</h1>
-<form action="#" th:action="@{/addusuariospost}" method="post">
-    <div style="display: flex; flex-direction: column">
-        <div>
-            <span th:if="${#fields.hasErrors('usuario.nombre')}" th:errors="*{usuario.nombre}" style="color: red"></span>
-        </div>
-        <div>
-            <label>Nombre</label>
-            <input type="text" th:field="${usuario.nombre}">
-        </div>
-        <div>
-            <span th:if="${#fields.hasErrors('usuario.password')}" th:errors="*{usuario.password}" style="color: red"></span>
-        </div>
-        <div>
-            <label>Password</label>
-            <input type="password" th:field="${usuario.password}">
-        </div>
-        <div>
-            <label>Permisos</label>
-            Admin<input type="radio" value="1" th:field="${usuario.permisos}">
-            User<input type="radio" value="2" th:field="${usuario.permisos}">
-        </div>
+<header>
+    <h1>Colegio Universitario Internacional BITCOIN</h1>
+    <input class="btn boton_menu" type="button" onclick="menu();" value="Menu">
+</header>
+<main>
+    <div class="centro">
+        <h1>Agregacion de nuevos Usuarios</h1>
+        <form action="#" th:action="@{/addusuariospost}" method="post">
+            <div class="campos">
+                <div class="campo">
+                    Nombre:
+                    <input type="text" th:field="${usuario.nombre}">
+                    <div>
+                        <span th:if="${#fields.hasErrors('usuario.nombre')}" th:errors="*{usuario.nombre}"
+                              style="color: red"></span>
+                    </div>
+                </div>
+                <div class="campo">
+                    Contraseña:
+                    <input type="password" th:field="${usuario.password}">
+                    <div>
+                        <span th:if="${#fields.hasErrors('usuario.password')}" th:errors="*{usuario.password}"
+                              style="color: red"></span>
+                    </div>
+                </div>
+                <div class="campo">
+                    Permisos:
+                    Admin<input type="radio" value="1" th:field="${usuario.permisos}">
+                    User<input type="radio" value="2" th:field="${usuario.permisos}">
+                </div>
+            </div>
+            <input class="btn btn_asig" type="submit" value="Guardar" onclick="prueba(event)">
+        </form>
     </div>
-    <input type="submit" value="submit">
-</form>
+</main>
+<footer>
+    <h6>Creado por Carlos Castillo</h6>
+</footer>
 </body>
+<script th:inline="javascript">
+    const form = document.getElementById("listado");
+
+    function update() {
+        form.setAttribute('action', 'updateusuariosget')
+        form.setAttribute('method', 'get')
+    }
+
+    function deletes() {
+        form.setAttribute('action', 'delusuariospost')
+        form.setAttribute('method', 'post')
+    }
+
+    function menu() {
+        location.href = "/menu"
+    }
+</script>
 </html>
