--- a/src/main/resources/templates/crud.html
+++ b/src/main/resources/templates/crud.html
@@ -11,9 +11,7 @@
 <body>
 <header>
     <h1>Colegio Universitario Internacional BITCOIN</h1>
-    <div>
-        <h6>Usted se ha loggeado como "ad o user"</h6>
-    </div>
+    <input class="btn boton_menu" type="button" onclick="cerrar_sesion();" value="Cerrar Sesion">
 </header>
 <main>
     <div class="centro">
@@ -54,4 +52,10 @@
     <h6>Creado por Carlos Castillo</h6>
 </footer>
 </body>
+<script th:inline="javascript">
+
+    function cerrar_sesion() {
+        location.href = "/"
+    }
+</script>
 </html>
